navbar zoom overflow fixed

--- a/style.scss
+++ b/style.scss
@@ -262,7 +262,7 @@ p {
       border: 1px solid #fff;
     }
     img {
-      width: 10%;
+      width: 140px;
     }
   }
 
